Basic functionality now working.
The interface and Style is still dull, but the basic funcionality is
there.
BUG: the password creation doesn't make sure everything it needs is
properly there.
i think i am commiting the wrong version. it might be a too late one.
go check that.

--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@
 #menu
 {
 	height: 100%;
-	width: 260;
+	width: 260px;
 }
 .LCD
 {
@@ -22,11 +22,14 @@
 }
 #progress
 {
-	width: 80%;
-	float: right;
+	margin: 10px;
+	float: left;
 }
 .finished
 {
-	background-color: chartreuse;
+	color: green;
 }
-	
+#body
+{
+	margin-left: 270px;
+}
