--- a/mystyle.css
+++ b/mystyle.css
@@ -1,28 +1,77 @@
-#debug 
-{ 
-	position:fixed;
-   	height:200px; 
-	width:500px; 
-	left:900px; 
-	top:135px;
-	opacity: 0.5;
-}
 #menu
 {
-	height: 100%;
-	width: 260px;
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	position:fixed;
+}
+#menu a:link, #menu a:visited
+{
+	display:block;
+	font-weight:bold;
+	color:#2779AA;
+	background-color:#E3F1FA;
+	width:260px;
+	text-align:left;
+	padding:4px;
+	text-decoration:none;
+
+	border-style: solid;
+	border-color: white;
+	border-width: 1px;
+}
+
+/*	white font	*/
+#menu a:hover,#menu a:active, .button:hover, .button:active
+{
+	color: white;
+}
+
+/*	gradient dark background	*/
+#menu a:hover, #menu a:active, .button:hover, .button:active
+{
+	background: #1e5799; /* Old browsers */
+	background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e5799), color-stop(50%,#2989d8), color-stop(51%,#207cca), color-stop(100%,#7db9e8)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C */
+}
+
+/*	all corners round	*/
+#menu a:hover, #menu a:active, .button:hover, .button:active, .dialog
+{
+	border-bottom-right-radius: 6px;
+	border-bottom-left-radius: 6px;
+	border-top-right-radius: 6px;
+	border-top-left-radius: 6px;
 }
 .LCD
 {
-	width: 2em;
-	height: 2em;
+	width: 1.5em;
+	height: 1.5em;
 	font-weight: bold;
 	font-size: 1em;
 	text-align: center;
 }
+#header
+{
+	text-align:center;
+}
+#header a:link, #header a:hover, #header a:visited
+{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
 #progress
 {
-	margin: 10px;
+	margin-right: 10px;
+	margin-left: 10px;
+	height: 1.5em;
+	width: 300px;
 }
 .finished
 {
@@ -30,15 +79,34 @@
 }
 #body
 {
-	border-style: solid none none solid;
+	border-style: none none none solid;
 	border-color: grey;
 	border-width: 2px;
 	margin-left: 270px;
 	padding: 10px;
 }
+#security-form input, #security-form label, #security-form .ui-icon
+{
+	float: left;
+}
+#security-form .ui-icon
+{
+	margin-left: 1em;
+	cursor: help;
+}
+.input-error .error
+{
+	background-color: #F6E69F;
+}
 .dialog
 {
-	display:none;
-	backgroud-color: #F6E69F;
+	display: inline-block;
+	border: 1px solid #C0C0C0;
+	padding: 5px;
+	margin: 10px;
+}
+.information
+{
+	background-color: gold;
 	border: 1px solid #C0C0C0;
 }
