--- a/mystyle.css
+++ b/mystyle.css
@@ -100,6 +100,47 @@
   padding: 5px;
   margin: 10px;
 }
+
+/* Modal dialog background */
+#modal-background {
+    display: none;
+    position: fixed;
+    z-index: 1; /* sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* black with opacity */
+}
+/* Modal content box */
+.modal-content {
+    background-color: #fefefe;
+    position: fixed;
+    top: 0;
+    left: 25%;
+    margin: 15% auto; /* 15% from top and centered */
+    padding: 20px;
+    border: 2px solid #d82727;
+    width: 50%;
+    z-index: 2; /* sit on top of the modal dialog background */
+    display: none;
+}
+/* The modal dialogs close button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .information
 {
   background-color: gold;
