Replace jQueryUI info icon

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,8 @@
+:root {
+    --button-foreground-dark: #2779AA;
+    --foreground-light: #fff;
+    --background-light: #E3F1FA;
+}
 #menu
 {
   list-style-type:none;
@@ -156,6 +161,18 @@
 {
   margin-left: 1em;
   cursor: help;
+}
+#security-info {
+    color: var(--foreground-light);
+    background-color: var(--button-foreground-dark);
+    width:16px;
+    height:16px;
+    display:inline-block;
+    border-radius:100%;
+    font-size:14px;
+    font-weight: bold;
+    text-align:center;
+    text-decoration:none;
 }
 .input-error .error
 {
