--- a/mystyle.css
+++ b/mystyle.css
@@ -38,6 +38,9 @@
 {
   color: var(--foreground-light);
 }
+
+/* taken from jQueryUI */
+.ui-widget { font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font-size: 1.1em; }
 }
 
 /*	gradient dark background	*/
