--- a/mystyle.css
+++ b/mystyle.css
@@ -41,6 +41,15 @@
 
 /* taken from jQueryUI */
 .ui-widget { font-family: Lucida Grande, Lucida Sans, Arial, sans-serif; font-size: 1.1em; }
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
+  color: var(--button-foreground-dark);
+  text-decoration: none;
+}
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+  border: 1px solid #2694e8;
+  background: #3baae3;
+  font-weight: bold;
+  color: #ffffff;
 }
 
 /*	gradient dark background	*/
