--- a/mystyle.css
+++ b/mystyle.css
@@ -54,18 +54,32 @@
   font-weight: bold;
   color: #ffffff;
 }
+button {
+  border: 1px solid #aed0ea;
+  background: var(--background-light);
+  font-weight: bold;
+  color: var(--button-foreground-dark);
+  border-radius: 6px;
+  display: inline-block;
+  position: relative;
+  padding: .4em 1em;
+  margin-right: .1em;
+  cursor: pointer;
+  text-align: center;
+  overflow: visible;
+  line-height: 1.4;
+}
 
-/*	gradient dark background	*/
-#menu a:hover, #menu a:active, .button:hover, .button:active
-{
-  background: #1e5799; /* Old browsers */
-  background: -moz-linear-gradient(top, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1e5799), color-stop(50%,#2989d8), color-stop(51%,#207cca), color-stop(100%,#7db9e8)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* Opera11.10+ */
-  background: -ms-linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* IE10+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
-  background: linear-gradient(top, #1e5799 0%,#2989d8 50%,#207cca 51%,#7db9e8 100%); /* W3C */
+button:hover,
+#menu a:hover,
+#menu a:active,
+.button:hover,
+.button:active,
+button:active {
+	border: 1px solid #74b2e2;
+	background: #e4f1fb;
+	font-weight: bold;
+	color: #0070a3;
 }
 
 /*	all corners round	*/
